# cpp2024

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: answers.txt  tasks.txt
lib/: eq.cpp  eq.h
professor/: professor.cpp  professor.h
source/base_structions/: base_structions.cpp  base_structions.h
source/board/: board.cpp  board.h
source/game/: game.cpp  game.h
source/objects/: objects.cpp  objects.h
source/structures/: structures.cpp  structures.h
student/: student.cpp  student.h
